--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,7 @@
   "private": true,
   "license": "MIT",
   "dependencies": {
-    "polymer": "Polymer/polymer#master"
+    "quetzal-element": "JanMiksovsky/quetzal-element#master"
   },
   "ignore": [
     "**/.*"
